--- a/myhpi/tenca_django/templates/tenca_django/action.html
+++ b/myhpi/tenca_django/templates/tenca_django/action.html
@@ -17,5 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <p>{% trans "This link is now invalid. You never need to visit it again." %}</p>
+    <p>
+        {% trans "This link is now invalid. You never need to visit it again." %}
+    </p>
 {% endblock %}
