--- a/myhpi/tenca_django/templates/tenca_django/backend_error.html
+++ b/myhpi/tenca_django/templates/tenca_django/backend_error.html
@@ -6,5 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <p>{% trans "Sorry for the inconvenience, but the mail server backend does not reply. Please try again later." %}</p>
+    <p>
+        {% trans "Sorry for the inconvenience, but the mail server backend does not reply. Please try again later." %}
+    </p>
 {% endblock %}
