--- a/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
@@ -38,7 +38,9 @@
             </div>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">{% trans 'Un-/Subscribe' %}</button>
+            <button type="submit" class="btn btn-primary">
+                {% trans 'Un-/Subscribe' %}
+            </button>
         </div>
     </form>
 {% endblock %}
