--- a/myhpi/polls/templates/polls/base_poll.html
+++ b/myhpi/polls/templates/polls/base_poll.html
@@ -17,9 +17,13 @@
                 {% elif page.results_visible %}
                     {% block results %}{% endblock %}
                 {% elif not page.in_voting_period %}
-                    <p>{% translate "You've accessed this page outside of the voting period." %}</p>
+                    <p>
+                        {% translate "You've accessed this page outside of the voting period." %}
+                    </p>
                 {% else %}
-                    <p>{% translate "You are not allowed to cast (another) vote and the results are not visible yet." %}</p>
+                    <p>
+                        {% translate "You are not allowed to cast (another) vote and the results are not visible yet." %}
+                    </p>
                 {% endif %}
             </div>
             <div class="col-lg-3">
