--- a/myhpi/templates/403.html
+++ b/myhpi/templates/403.html
@@ -15,8 +15,14 @@
     </p>
 
     <ul class="pb-3">
-        <li>{% translate "You are not logged in and are not accessing the page from the university network." %}</li>
-        <li>{% translate "You are not logged in and the page is only available for logged in users." %}</li>
-        <li>{% translate "You are logged in but don't have the required permissions to access this page." %}</li>
+        <li>
+            {% translate "You are not logged in and are not accessing the page from the university network." %}
+        </li>
+        <li>
+            {% translate "You are not logged in and the page is only available for logged in users." %}
+        </li>
+        <li>
+            {% translate "You are logged in but don't have the required permissions to access this page." %}
+        </li>
     </ul>
 {% endblock %}
