--- a/myhpi/tenca_django/templates/tenca_django/manage_list.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_list.html
@@ -27,21 +27,13 @@
 	<h3>{% trans "List options" %}</h3>
     <form method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <div class="form-check">
-                <input type="checkbox" name="notsubscribed_allowed_to_post" class="form-check-input" id="id_notsubscribed_allowed_to_post" checked="">
-                <label class="form-check-label" for="id_notsubscribed_allowed_to_post">
-                    Not subscribed users are allowed to post.
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="form-check">
-                <input type="checkbox" name="replies_addressed_to_list" class="form-check-input" id="id_replies_addressed_to_list">
-                <label class="form-check-label" for="id_replies_addressed_to_list">
-                    Replies are addressed to the list per default.
-                </label>
-            </div>
+        <div class="form-group mb-3">
+            {% for field in form %}
+                <div class="form-check">
+                    {{ field|addcss:"form-check-input" }}
+                    {{ field.label_tag }}
+                </div>
+            {% endfor %}
         </div>
 		<div class="form-group">
 			<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
