refactor: use attachments.exists

--- a/myhpi/core/templates/core/sidebar.html
+++ b/myhpi/core/templates/core/sidebar.html
@@ -26,7 +26,7 @@
         {{ parsed_md.1 }}
     </aside>
     {% endif %}
-    {% if page.attachments.all %}
+    {% if page.attachments.exists %}
         <aside class="side-panel border-accent sidebar-container d-print-none">
             <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
             <ul>
@@ -39,9 +39,11 @@
         </aside>
     {% endif %}
 </div>
-
-{%if parsed_md.1|hasTocContent or page.attachments.all %}
-    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="sidebar-offcanvas" aria-labelledby="sidebar-offcanvas-label">
+{% if parsed_md.1|hasTocContent or page.attachments.exists %}
+    <div class="offcanvas offcanvas-bottom"
+         tabindex="-1"
+         id="sidebar-offcanvas"
+         aria-labelledby="sidebar-offcanvas-label">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sidebar-offcanvas-label">{% translate "Table of contents" %}</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
@@ -52,7 +54,7 @@
                 <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
                 {{ parsed_md.1 }}
             </aside>
-            {% if page.attachments.all %}
+            {% if page.attachments.exists %}
                 <aside class="side-panel border-accent sidebar-container d-print-none">
                     <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
                     <ul>
