--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     {% with page.body|markdown as parsed_md %}
-        {% include "core/toc_button.html" with toc=parsed_md.1 attachments=page.attachments.all %}
+        {% include "core/toc_button.html" with toc=parsed_md.1 attachments=page.attachments.exists %}
         <div class="row flex-column flex-lg-row">
             <div class="col-lg-9">
                 <h1 class="page-title">
