add mailman template view

--- a/myhpi/tenca_django/templates/mailman/unsubscription_message.html
+++ b/myhpi/tenca_django/templates/mailman/unsubscription_message.html
@@ -4,6 +4,6 @@ Please confirm your *unsubscription* from {{fqdn_listname}}:
 {{action_link}}
 
 If you did not request this, please report abuse by visiting the following link:
-$action_abuse_link
+{{action_abuse_link}}
 
 Thanks for using {{web_ui}}! We hope to serve you again soon.
