Do not escape mailman templates
The mailman templates are served as text/plain

--- a/myhpi/tenca_django/templates/mailman/creation_message.html
+++ b/myhpi/tenca_django/templates/mailman/creation_message.html
@@ -1,9 +1,9 @@
 Thanks for your sign-up!
 
 This is your new list:
-{{fqdn_listname}}
+{{ fqdn_listname | safe }}
 
 Share the following URL to people that you want to invite to the list:
-{{invite_link}}
+{{ invite_link | safe }}
 
 Have fun!
