--- a/myhpi/tenca_django/templates/mailman/rejected_message.html
+++ b/myhpi/tenca_django/templates/mailman/rejected_message.html
@@ -3,8 +3,8 @@ Dear user,
 we are sorry to tell you, that your *mail* could *not* be *delivered*,
 for the following reasons:
 
-	$$reasons
+	$reasons
 
 Best regards!
 
-{{web_ui}}
+{{ web_ui | safe }}
