Build correct template links

--- a/myhpi/tenca_django/templates/mailman/creation_message.html
+++ b/myhpi/tenca_django/templates/mailman/creation_message.html
@@ -1,7 +1,7 @@
 Thanks for your sign-up!
 
 This is your new list:
-{{ fqdn_listname | safe }}
+$listname
 
 Share the following URL to people that you want to invite to the list:
 {{ invite_link | safe }}
