--- a/myhpi/tenca_django/templates/mailman/subscription_message.html
+++ b/myhpi/tenca_django/templates/mailman/subscription_message.html
@@ -1,9 +1,9 @@
-Welcome to {{ fqdn_listname | safe }}
+Welcome to $listname
 
 Please confirm your *subscription*:
-{{ action_link | safe }}
+{{ confirm_link | safe }}
 
 If you did not request this, please report abuse by visiting the following link:
-{{ action_abuse_link | safe }}
+{{ report_link | safe }}
 
 Enjoy our service!
