--- a/myhpi/tenca_django/templates/mailman/unsubscription_message.html
+++ b/myhpi/tenca_django/templates/mailman/unsubscription_message.html
@@ -1,9 +1,9 @@
 Dear user,
 
-Please confirm your *unsubscription* from {{ fqdn_listname | safe }}:
-{{ action_link | safe }}
+Please confirm your *unsubscription* from $listname:
+{{ confirm_link | safe }}
 
 If you did not request this, please report abuse by visiting the following link:
-{{ action_abuse_link | safe }}
+{{ report_link | safe }}
 
 Thanks for using {{ web_ui | safe }}! We hope to serve you again soon.
