--- a/myhpi/tenca_django/templates/tenca_django/action.html
+++ b/myhpi/tenca_django/templates/tenca_django/action.html
@@ -2,17 +2,15 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Adjust membership" %}
+    {% trans "Adjust Mailing List Subscription" %}
 {% endblock %}
 
 {% block breadcrumbs %}
     {% if request.user.is_authenticated %}
-        <li>
-            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;<a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing lists" %}</a>
+        <li class="breadcrumb-item">
+            <a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing Lists" %}</a>
         </li>
-        <li>
-            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Adjust membership" %}
-        </li>
+        <li class="breadcrumb-item">{% trans "Adjust Subscription" %}</li>
     {% endif %}
 {% endblock %}
 
