--- a/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
@@ -29,9 +29,9 @@
     <div class="card">
         <div class="card-body">
             <p>
-                {% blocktrans %}
-          Enter the e-mail address you want to un-/subscribe from/to {{ list_name }}:
-        {% endblocktrans %}
+                {% blocktrans trimmed %}
+                    Enter the e-mail address you want to un-/subscribe from/to {{ list_name }}:
+                {% endblocktrans %}
             </p>
 
             <form method="post">
